--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -149,6 +149,6 @@
     }
 
     .sidebar-footer {
-        margin-top: 1rem;
+        display: none;
     }
 }
